--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,6 +16,10 @@
         </h1>
         <a class="back-link" href="./index.html">Go back</a>
       </div>
+      <ul class="gallery">
+
+      </ul>
+
     </main>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
