--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,6 +15,17 @@
           Form
         </h1>
         <a class="back-link" href="./index.html">Go back</a>
+        <form class="feedback-form" autocomplete="off">
+          <label>
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </main>
 
